<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">QUANTITY</string>
    <string name="order">ORDER</string>
    <string name="enter_quantity">Number of Caps</string>
    <string name="price">PRICE</string>
    <string name="price_quantity">Your order price</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="toppings">TOPPINGS</string>
    <string name="chocolate">Chocolate</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="thanks">Thank You!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Alf">%s</xliff:g> </string>
    <string name="email_subject">JustJava Order for: <xliff:g id="name" example="Alf">%s</xliff:g> </string>
    <string name="hint_your_name">Your Name</string>
    <string name="hint_your_email">Your E-mail</string>
    <string name="start_quantity">1</string>
    <string name="add_whipped_cream">"Add Whipped Cream: "</string>
    <string name="add_chocolate">"Add Chocolate: "</string>
    <string name="total_summ">Total: $</string>
    <string name="min_quantity">Number of cups must be more 0</string>
    <string name="max_quantity">You cannot buy more than 100 caps</string>
</resources>